# utl_function

./: .gitignore  LICENSE  README.md
build_scripts/: cmake_unix.sh  cmake_win64_debug.bat  cmake_win64_release.bat
utl/: function.hpp
utl_function_tests/: CMakeLists.txt  basic_utl_function_test_fixture.hpp  override_global_new_and_delete.hpp  static_assertions.cpp  test_utl_function.cpp  test_utl_function_case_01_default_construction.cpp  test_utl_function_case_02_construction_from_callables_and_invocation.cpp  test_utl_function_case_03_move_construction.cpp  test_utl_function_case_04_assignment_from_callables.cpp  tested_functions_and_function_objects.hpp
